buildscript {
    repositories {
        jcenter()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.2.6.RELEASE")
        classpath 'io.spring.gradle:dependency-management-plugin:1.0.9.RELEASE'
    }
}

plugins {
    id "org.sonarqube" version "2.6"
    id 'jacoco'
}

repositories {
    mavenCentral()
    mavenLocal()
    jcenter()
}



apply plugin: 'java'
apply plugin: 'groovy'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'
apply plugin: 'maven'



compileJava {
    sourceCompatibility = JavaVersion.VERSION_11
}

buildDir = 'dist'
jar.baseName = 'workflow-engine'

dependencyManagement {
    imports {
        mavenBom 'org.camunda.bpm:camunda-bom:7.13.0'
    }
}

test {
    testLogging {
        events "PASSED", "STARTED", "FAILED"
    }
}


dependencies {
    compile ('org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter')
    compile ('org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter-rest')
    compile ('org.camunda.bpm:camunda-engine-rest')
    compile('org.camunda.bpm.extension.reactor:camunda-bpm-reactor-spring-starter:2.1.1')
    compile('org.camunda.spin:camunda-spin-dataformat-json-jackson')
    compile('org.camunda.bpm:camunda-engine-plugin-spin')
    compile 'org.camunda.bpm.extension.feel.scala:feel-engine-plugin:1.10.1'
    compile('org.camunda.connect:camunda-connect-connectors-all:1.3.0')
    compile('org.camunda.connect:camunda-connect-core:1.3.0')
    compile('org.camunda.bpm:camunda-engine-plugin-connect')
    compile 'org.jsoup:jsoup:1.11.2'
    compile('org.springframework.security:spring-security-messaging')
    compile ('org.springframework.boot:spring-boot-configuration-processor') {
        exclude group: 'com.vaadin.external.google', module: 'android-json'
    }
    compile ('org.springframework.boot:spring-boot-starter-webflux')
    compile ('org.springframework.boot:spring-boot-starter-actuator')
    compile ('org.springframework.boot:spring-boot-starter-websocket')
    compile ('org.springframework.boot:spring-boot-starter-security')
    compile ('org.springframework.boot:spring-boot-starter-hateoas')
    compile('org.springframework.boot:spring-boot-starter-jdbc')
    compile('org.springframework.boot:spring-boot-starter-cache')
    compile('org.springframework.boot:spring-boot-starter-json')
    compile('org.springframework.boot:spring-boot-starter-data-redis')
    compile group: 'redis.clients', name: 'jedis', version: '3.2.0'
    compile group: 'org.springframework.session', name: 'spring-session-data-redis', version: '2.2.2.RELEASE'
    compile('net.logstash.logback:logstash-logback-encoder:5.3')
    compile('com.github.ben-manes.caffeine:caffeine')
    compile('org.springframework.data:spring-data-commons')
    compile('org.springframework.retry:spring-retry:1.2.5.RELEASE')
    compile group: 'org.aspectj', name: 'aspectjtools', version: '1.8.13'
    compile 'io.springfox:springfox-swagger2:2.7.0'
    compile 'io.springfox:springfox-swagger-ui:2.7.0'
    compile 'org.apache.commons:commons-lang3:3.6'
    compile('org.keycloak:keycloak-spring-boot-2-adapter:6.0.1')
    compile group: 'org.keycloak', name: 'keycloak-tomcat8-adapter', version: '6.0.1'
    compile group: 'org.eclipse', name: 'yasson', version: '1.0'
    compile group: 'org.glassfish', name: 'javax.json', version: '1.1.2'
    compile group: 'org.jboss.resteasy', name: 'resteasy-client', version: '3.5.0.Final'
    compile group: 'org.jboss.resteasy', name: 'resteasy-jackson2-provider', version: '3.5.0.Final'
    compile('uk.gov.service.notify:notifications-java-client:3.8.0-RELEASE')
    compile 'org.glassfish:javax.el:3.0.1-b08'
    compile ('org.codehaus.groovy:groovy-all:2.4.6')
    compile ('org.postgresql:postgresql:42.1.4')
    compile('org.projectlombok:lombok:1.18.6')
    annotationProcessor('org.projectlombok:lombok:1.18.6')
    annotationProcessor('org.springframework.boot:spring-boot-configuration-processor')
    compile 'org.codehaus.groovy:groovy-all:2.4.10'
    compile 'org.glassfish.jaxb:jaxb-runtime:2.3.2'
    compile 'io.digitalpatterns:camunda-process-variable-encryption:1.6.Final'
    compile 'org.apache.httpcomponents:httpclient:4.5.9'
    compile 'com.amazonaws:aws-java-sdk-s3:1.11.714'
    compile 'com.amazonaws:aws-java-sdk-ses:1.11.714'
    compile 'com.amazonaws:aws-java-sdk-core:1.11.714'
    compile 'javax.mail:javax.mail-api:1.6.2'
    compile 'com.sun.mail:javax.mail:1.6.2'

    compile 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.6.2'
    compile 'org.elasticsearch:elasticsearch:7.6.2'
    compile 'org.elasticsearch.client:elasticsearch-rest-client:7.6.2'

    compile 'org.springframework.cloud:spring-cloud-context:2.2.2.RELEASE'
    compile 'org.springframework.cloud:spring-cloud-starter-aws-secrets-manager-config:2.2.1.RELEASE'
    compile group: 'org.scala-lang', name: 'scala-library', version: '2.13.2'
    
    testCompile ('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'com.vaadin.external.google', module: 'android-json'
    }
    testCompile 'org.spockframework:spock-core:1.1-groovy-2.4'

    testCompile 'net.bytebuddy:byte-buddy:1.9.12'
    testCompile 'org.objenesis:objenesis:2.5.1'
    testCompile 'com.github.tomjankes:wiremock-groovy:0.2.0'
    testCompile 'org.spockframework:spock-spring:1.1-groovy-2.4'
    testCompile ('com.h2database:h2:1.4.196')
    testCompile('org.hamcrest:hamcrest-all:1.3')
    testCompile('org.mockito:mockito-core:2.15.0')
    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.9.1'
    testCompile group: 'com.tngtech.java', name: 'junit-dataprovider', version: '1.13.1'
    testCompile group: 'com.github.tomakehurst', name: 'wiremock-standalone', version: '2.17.0'

    testCompile "org.testcontainers:spock:1.14.1"
    testCompile "org.testcontainers:localstack:1.14.1"

}

jacoco {
    toolVersion = "0.8.3"
}

jacocoTestReport {
    reports {
        xml.enabled true
        html.enabled true
        csv.enabled true
    }
}
